manifests/chaosnode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaosnode-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chaosnode
  template:
    metadata:
      labels:
        app: chaosnode
    spec:
      containers:
      - name: chaosnode-container
        image: 578681496768.dkr.ecr.us-east-1.amazonaws.com/chaosnode:latest
        args: ["-spec", "http://noms-service:8000"]
        ports:
        - containerPort: 46658
        volumeMounts:
        - mountPath: "/root/.ndau"
          name: ndau-home-volume
      volumes:
      - name: ndau-home-volume
        emptyDir: {}
