manifests/tendermint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tendermint-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tendermint
  template:
    metadata:
      labels:
        app: tendermint
    spec:
      containers:
      - name: tendermint-container
        image: 578681496768.dkr.ecr.us-east-1.amazonaws.com/tendermint:latest
        ports:
        - containerPort: 46656
        - containerPort: 46657
        volumeMounts:
        - mountPath: /tendermint
          name: tendermint-home-volume
      volumes:
        - name: tendermint-init
          configMap:
            name: tendermint-config-init
        - name: tendermint-home-volume
          persistentVolumeClaim:
            claimName: tendermint-claim
        # TODO: This might be problematic because it needs to point to 
        # the chaosnode. Which could be hard to template.
        - name: config-toml 
          configMap:
            name: tendermint-config-toml
        - name: genesis-file
          configMap:
            name: tendermint-config-genesis
        - name: priv-validator-file
          configMap:
            name: tendermint-config-priv-validator
