manifests/noms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noms-service
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: db
  selector:
    app: noms
